removed deprecated stuff, added parallel scanning, removed document ui

--- a/example/www/index.html
+++ b/example/www/index.html
@@ -109,8 +109,7 @@
                 <br />
                 <input type="button" value="Document" onclick="anyline.document.scan()" class="formButton" disabled=true/>
                 <br />
-                <input type="button" value="Document UI" onclick="anyline.documentUI.scan()" class="formButton" disabled=true/>
-                <br />
+
                 <input type="button" value="Cattle Tag" onclick="anyline.ocr.scanCattleTag()" class="formButton" disabled=true/>
                 </p>
                 <hr>
@@ -118,6 +117,9 @@
                 <p>
                 <input type="button" value="Serial Scanning" onclick="anyline.serialScan.scan()" class="formButton" disabled=true/>
                 <br />
+                <input type="button" value="Parallel Scanning" onclick="anyline.parallelScan.scan()" class="formButton" disabled=true/>
+                <br />
+
                 </p>
             </details>
             
@@ -153,13 +155,14 @@
         <script type="text/javascript" src="js/anyline.drivingLicense.NL.js"></script>
         <script type="text/javascript" src="js/anyline.drivingLicense.BE.js"></script>
         <script type="text/javascript" src="js/anyline.document.js"></script>
-        <script type="text/javascript" src="js/anyline.documentUI.js"></script>
         <script type="text/javascript" src="js/anyline.licensePlate.js"></script>
         <script type="text/javascript" src="js/anyline.vin.js"></script>
         <script type="text/javascript" src="js/anyline.usnr.js"></script>
         <script type="text/javascript" src="js/anyline.container.js"></script>
         <script type="text/javascript" src="js/anyline.germanIDFront.js"></script>
         <script type="text/javascript" src="js/anyline.serialScan.js"></script>
+        <script type="text/javascript" src="js/anyline.parallelScan.js"></script>
+
     </body>
     
 </html>
