first cognex plugin setup

--- a/example/www/index.html
+++ b/example/www/index.html
@@ -37,6 +37,12 @@
                 <summary class="summary1">
                     Scan Modes
                 </summary>
+
+                <h2> Meter Reading </h2>
+                <p>
+                    <input type="button" value="MX Scanner" onclick="anyline.mx.scanMX()" class="formButton" disabled=true/>
+                    <br />
+                </p>
                 <h2> Meter Reading </h2>
                 <p>
                 <input type="button" value="Analog/Digital Meter"
@@ -162,6 +168,7 @@
         <script type="text/javascript" src="js/anyline.germanIDFront.js"></script>
         <script type="text/javascript" src="js/anyline.serialScan.js"></script>
         <script type="text/javascript" src="js/anyline.parallelScan.js"></script>
+        <script type="text/javascript" src="js/anyline.mx.js"></script>
 
     </body>
     
