included description on what to scan on the button for Parallel and Serial scanning

--- a/example/www/index.html
+++ b/example/www/index.html
@@ -115,9 +115,9 @@
                 <hr>
                 <h2> Workflows </h2>
                 <p>
-                <input type="button" value="Serial Scanning" onclick="anyline.serialScan.scan()" class="formButton" disabled=true/>
+                <input type="button" value="Serial Scanning (LP>DL>VIN)" onclick="anyline.serialScan.scan()" class="formButton" disabled=true/>
                 <br />
-                <input type="button" value="Parallel Scanning" onclick="anyline.parallelScan.scan()" class="formButton" disabled=true/>
+                <input type="button" value="Parallel Scanning (Meter/USRN)" onclick="anyline.parallelScan.scan()" class="formButton" disabled=true/>
                 <br />
 
                 </p>
