added iphone mxscanner

--- a/example/www/index.html
+++ b/example/www/index.html
@@ -38,9 +38,11 @@
                     Scan Modes
                 </summary>
 
-                <h2> Meter Reading </h2>
+                <h2> Cognex Scanning </h2>
                 <p>
                     <input type="button" value="MX Scanner" onclick="anyline.mx.scanMX()" class="formButton" disabled=true/>
+                    <br />
+                    <input type="button" value="BMW Phone Scanner" onclick="anyline.iqpress.scan()" class="formButton" disabled=true/>
                     <br />
                 </p>
                 <h2> Meter Reading </h2>
@@ -169,6 +171,7 @@
         <script type="text/javascript" src="js/anyline.serialScan.js"></script>
         <script type="text/javascript" src="js/anyline.parallelScan.js"></script>
         <script type="text/javascript" src="js/anyline.mx.js"></script>
+        <script type="text/javascript" src="js/anyline.iqpress.js"></script>
 
     </body>
     
