--- a/example/www/index.html
+++ b/example/www/index.html
@@ -64,6 +64,8 @@
                 <br />
                 <input type="button" value="MRZ of Passport or ID" onclick="anyline.mrz.scan()" class="formButton" disabled=true/>
                 <br />
+                <input type="button" value="MRZ+NFC" onclick="anyline.nfc.scan()" class="formButton" disabled=true/>
+                <br />
                 <input type="button" value="German ID Front" onclick="anyline.germanIdFront.scan()"
                 class="formButton" disabled=true/>
                 <br />
@@ -150,6 +152,7 @@
         <script type="text/javascript" src="js/anyline.barcode.js"></script>
         <script type="text/javascript" src="js/anyline.energy.js"></script>
         <script type="text/javascript" src="js/anyline.mrz.js"></script>
+        <script type="text/javascript" src="js/anyline.nfc.js"></script>
         <script type="text/javascript" src="js/anyline.ocr.js"></script>
         <script type="text/javascript" src="js/anyline.drivingLicense.js"></script>
         <script type="text/javascript" src="js/anyline.drivingLicense.NL.js"></script>
