Added NFC use case to example app + display result; NFC can now only be opened if iOS version >= 13 and if the phone supports NFC

--- a/example/www/index.html
+++ b/example/www/index.html
@@ -64,7 +64,7 @@
                 <br />
                 <input type="button" value="MRZ of Passport or ID" onclick="anyline.mrz.scan()" class="formButton" disabled=true/>
                 <br />
-                <input type="button" value="MRZ+NFC" onclick="anyline.nfc.scan()" class="formButton" disabled=true/>
+                <input type="button" value="MRZ+NFC (iOS)" onclick="anyline.nfc.scan()" class="formButton" disabled=true/>
                 <br />
                 <input type="button" value="German ID Front" onclick="anyline.germanIdFront.scan()"
                 class="formButton" disabled=true/>
