add Universal Id

--- a/example/www/index.html
+++ b/example/www/index.html
@@ -91,6 +91,9 @@
                 <br />
                 <input type="button" value="Barcode PDF417" onclick="anyline.barcode.scan('pdf417')"
                 class="formButton" disabled=true/>
+                <br />
+                <input type="button" value="Universal Id" onclick="anyline.universalId.scan()"
+                       class="formButton" disabled=true/>
                 <p>
                 </p>
                 <h2>Anyline OCR</h2>
@@ -172,6 +175,7 @@
         <script type="text/javascript" src="js/anyline.barcode.js"></script>
         <script type="text/javascript" src="js/anyline.energy.js"></script>
         <script type="text/javascript" src="js/anyline.mrz.js"></script>
+        <script type="text/javascript" src="js/anyline.universalId.js"></script>
         <script type="text/javascript" src="js/anyline.nfc.js"></script>
         <script type="text/javascript" src="js/anyline.ocr.js"></script>
         <script type="text/javascript" src="js/anyline.drivingLicense.js"></script>
