renamed menu use case titles

--- a/example/www/index.html
+++ b/example/www/index.html
@@ -71,7 +71,7 @@
                 <input type="button" value="Serial Number" onclick="anyline.energy.scan('SERIAL_NUMBER')"
                 class="formButton" disabled=true/>
                 <br />
-                <input type="button" value="Dial Meter ALPHA" onclick="anyline.energy.scan('DIAL_METER')"
+                <input type="button" value="Dial Meter" onclick="anyline.energy.scan('DIAL_METER')"
                 class="formButton" disabled=true/>
                 <br />
                 <input type="button" value="Dot Matrix Meter" onclick="anyline.energy.scan('DOT_MATRIX_METER')"
@@ -79,7 +79,7 @@
                 <br />
                 <hr>
                 <h2>ID</h2>
-                <input type="button" value="AT/DE/UK Driving License" onclick="anyline.drivingLicense.scan()"
+                <input type="button" value="Driving License" onclick="anyline.drivingLicense.scan()"
                 class="formButton" disabled=true/>
                 <br />
                 <input type="button" value="MRZ of Passport or ID" onclick="anyline.mrz.scan()" class="formButton" disabled=true/>
