Added arabicId scanMode to example app

--- a/example/www/index.html
+++ b/example/www/index.html
@@ -95,6 +95,9 @@
                 <input type="button" value="Universal Id" onclick="anyline.universalId.scan()"
                        class="formButton" disabled=true/>
                 <p>
+                <input type="button" value="Arabic Id" onclick="anyline.arabicId.scan()"
+                       class="formButton" disabled=true/>
+                <p>
                 </p>
                 <h2>Anyline OCR</h2>
                 <p>
@@ -176,6 +179,7 @@
         <script type="text/javascript" src="js/anyline.energy.js"></script>
         <script type="text/javascript" src="js/anyline.mrz.js"></script>
         <script type="text/javascript" src="js/anyline.universalId.js"></script>
+        <script type="text/javascript" src="js/anyline.arabicId.js"></script>
         <script type="text/javascript" src="js/anyline.nfc.js"></script>
         <script type="text/javascript" src="js/anyline.ocr.js"></script>
         <script type="text/javascript" src="js/anyline.drivingLicense.js"></script>
