added JLP config

--- a/example/www/index.html
+++ b/example/www/index.html
@@ -94,8 +94,11 @@
                 <br />
                 <input type="button" value="Universal Id" onclick="anyline.universalId.scan()"
                        class="formButton" disabled=true/>
-                <p>
+                <br />                 
                 <input type="button" value="Arabic Id" onclick="anyline.arabicId.scan()"
+                       class="formButton" disabled=true/>
+                <br />
+                <input type="button" value="Japanese Landing Permit" onclick="anyline.japaneseLandingPermit.scan()"
                        class="formButton" disabled=true/>
                 <p>
                 </p>
@@ -180,6 +183,7 @@
         <script type="text/javascript" src="js/anyline.mrz.js"></script>
         <script type="text/javascript" src="js/anyline.universalId.js"></script>
         <script type="text/javascript" src="js/anyline.arabicId.js"></script>
+        <script type="text/javascript" src="js/anyline.japaneseLandingPermit.js"></script>
         <script type="text/javascript" src="js/anyline.nfc.js"></script>
         <script type="text/javascript" src="js/anyline.ocr.js"></script>
         <script type="text/javascript" src="js/anyline.drivingLicense.js"></script>
