updated JLP config

--- a/example/www/index.html
+++ b/example/www/index.html
@@ -98,7 +98,7 @@
                 <input type="button" value="Arabic Id" onclick="anyline.arabicId.scan()"
                        class="formButton" disabled=true/>
                 <br />
-                <input type="button" value="Japanese Landing Permit" onclick="anyline.japaneseLandingPermit.scan()"
+                <input type="button" value="japaneseLandingPermit" onclick="anyline.japaneseLandingPermit.scan()"
                        class="formButton" disabled=true/>
                 <p>
                 </p>
