--- a/example/www/index.html
+++ b/example/www/index.html
@@ -98,6 +98,9 @@
                 <input type="button" value="Arabic Id" onclick="anyline.arabicId.scan()"
                        class="formButton" disabled=true/>
                 <p>
+                <input type="button" value="Japanese Landing Permission" onclick="anyline.japaneseLandingPermission.scan()"
+                       class="formButton" disabled=true/>
+                <p>
                 </p>
                 <h2>Anyline OCR</h2>
                 <p>
@@ -180,6 +183,7 @@
         <script type="text/javascript" src="js/anyline.mrz.js"></script>
         <script type="text/javascript" src="js/anyline.universalId.js"></script>
         <script type="text/javascript" src="js/anyline.arabicId.js"></script>
+        <script type="text/javascript" src="js/anyline.japaneseLandingPermission.js"></script>
         <script type="text/javascript" src="js/anyline.nfc.js"></script>
         <script type="text/javascript" src="js/anyline.ocr.js"></script>
         <script type="text/javascript" src="js/anyline.drivingLicense.js"></script>
