Add cyrillic id config

--- a/example/www/index.html
+++ b/example/www/index.html
@@ -98,6 +98,9 @@
                 <input type="button" value="Arabic Id" onclick="anyline.arabicId.scan()"
                        class="formButton" disabled=true/>
                 <p>
+                <input type="button" value="Cyrillic Id" onclick="anyline.cyrillicId.scan()"
+                       class="formButton" disabled=true/>
+                <p>
                 <input type="button" value="Japanese Landing Permission" onclick="anyline.japaneseLandingPermission.scan()"
                        class="formButton" disabled=true/>
                 <p>
@@ -183,6 +186,7 @@
         <script type="text/javascript" src="js/anyline.mrz.js"></script>
         <script type="text/javascript" src="js/anyline.universalId.js"></script>
         <script type="text/javascript" src="js/anyline.arabicId.js"></script>
+        <script type="text/javascript" src="js/anyline.cyrillicId.js"></script>
         <script type="text/javascript" src="js/anyline.japaneseLandingPermission.js"></script>
         <script type="text/javascript" src="js/anyline.nfc.js"></script>
         <script type="text/javascript" src="js/anyline.ocr.js"></script>
