--- a/example/www/index.html
+++ b/example/www/index.html
@@ -108,6 +108,16 @@
                 <br />
                 </p>
                 <hr>
+                <h2>Tire</h2>
+                <p>
+                <input type="button" value="TIN" onclick="anyline.tire.scanTin()" class="formButton" disabled=true/>
+                <br />
+                <input type="button" value="Tire Size" onclick="anyline.tire.scanTireSize()" class="formButton" disabled=true/>
+                <br />
+                <input type="button" value="Commercial Tire ID" onclick="anyline.tire.scanCommercialTireId()" class="formButton" disabled=true/>
+                <br />
+                </p>
+                <hr>
                 <h2> Vehicles </h2>
                 <p>
                 <input type="button" value="License Plates"
@@ -184,6 +194,7 @@
         <script type="text/javascript" src="js/anyline.japaneseLandingPermission.js"></script>
         <script type="text/javascript" src="js/anyline.nfc.js"></script>
         <script type="text/javascript" src="js/anyline.ocr.js"></script>
+        <script type="text/javascript" src="js/anyline.tire.js"></script>
         <script type="text/javascript" src="js/anyline.document.js"></script>
         <script type="text/javascript" src="js/anyline.licensePlate.js"></script>
         <script type="text/javascript" src="js/anyline.vin.js"></script>
