Update cordova-ios version

--- a/example/www/index.html
+++ b/example/www/index.html
@@ -142,7 +142,7 @@
                 <input type="button" value="Commercial Tire ID" onclick="anyline.vehicle.scan('COMMERCIAL_TIRE')"
                     class="formButton" disabled=true />
                 <br />
-                <input type="button" value="Tire make" onclick="anyline.vehicle.scan('TIRE_MAKE')"
+                <input type="button" value="Tire Make" onclick="anyline.vehicle.scan('TIRE_MAKE')"
                     class="formButton" disabled=true />
                 <br />
                 <input type="button" value="Vehicle Identification No." onclick="anyline.vehicle.scan('VIN')"
